AUTOMAKE_OPTIONS = 
SUBDIRS = \
  dijkstrashortreach \
  the-grid-search \
  swap-nodes-algo/using-tree-data-structure \
  swap-nodes-algo/using-vector-tree \
  diagonal-difference \
  maximizing-xor \
  time-conversion \
  plus-minus \
  sherlock-and-array \
  primsmstsub \
  building-a-list
 
AM_CXXFLAGS = 
AM_CFLAGS = 
AM_LDFLAGS = 
