AUTOMAKE_OPTIONS = 
SUBDIRS = \
  dijkstrashortreach \
  the-grid-search \
  swap-nodes-algo/using-tree-data-structure \
  swap-nodes-algo/using-vector-tree \
  diagonal-difference \
  maximizing-xor \
  time-conversion \
  plus-minus \
  sherlock-and-array \
  primsmstsub \
  building-a-list \
  cpp_variadics \
  magic_spells \
  ctci-array-left-rotation \
  minimum-swaps-2
 
AM_CXXFLAGS = -std=c++14
AM_CFLAGS = 
AM_LDFLAGS = 
